--- a/style/style.css
+++ b/style/style.css
@@ -56,7 +56,9 @@ h1{
    background-image: linear-gradient(yellow,tomato);
    padding: 10px 40px;
    border-radius: 5px;
-   margin-bottom: 40px;
+   margin-bottom: 40px; 
+   color: aliceblue;
+   
    
    
  
