--- a/style/style.css
+++ b/style/style.css
@@ -158,7 +158,7 @@ padding-bottom: 20px;
           0.3em 0.3em 1em rgba(0,0,0,0.3);
 
           margin: 5px 50px;
-          border: 5px solid tomato;
+         
           border-top-left-radius: 15px;
           border-bottom-left-radius: 15px;
     
@@ -176,4 +176,11 @@ padding-bottom: 20px;
 }
 .item2{
     padding: 15px 20px;
+}
+
+footer{
+    margin-top: 30px;
+    text-align: center;
+    padding: 30px 400px;
+    background-image: linear-gradient(orange, tomato);
 }
